rectified left alignment issue, filter section width adjusted, mobile responsiveness checked, filter function rectified

--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -4,5 +4,5 @@
 
 .individual-card {
     height: 540px;
-    width: 260px;
+    // width: 200px;
 }
