--- a/src/components/filter/filter.styles.scss
+++ b/src/components/filter/filter.styles.scss
@@ -1,13 +1,15 @@
 .filter {
     grid-column: filter-start / filter-end;
     background-color: #ffffff;
-    margin: 8px;
-
+    width: 180px;
+    margin: 10px;
+    
     @media only screen and (max-width: 700px) {
         grid-column: center-start / center-end;
+        justify-self: center;
     }
 
-    @media only screen and (max-width: 625px) {
+    @media only screen and (max-width: 400px) {
         grid-column: full-start / full-end;
     }
 
