--- a/src/components/space-programs-details/space-programs-details.styles.scss
+++ b/src/components/space-programs-details/space-programs-details.styles.scss
@@ -2,16 +2,17 @@
     grid-column: center-start / center-end;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
     gap: 20px;
+    justify-items: center;
 
-    // @media only screen and (max-width: 1440px) {
-    //     grid-template-columns: repeat(4, minmax(250px, 1fr));
-    // }
+    @media only screen and (max-width: 1360px) {
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+    }
 
-    // @media only screen and (max-width: 1024px) {
-    //     grid-template-columns: repeat(2, minmax(250px, 1fr));
-    // }
+    @media only screen and (max-width: 1024px) {
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+    }
 
     @media only screen and (max-width: 700px) {
         grid-column: full-start / full-end;
